--- a/style.css
+++ b/style.css
@@ -6,21 +6,21 @@
 }
 .full-page
 {
-    height: 100%;
-	width: 100%;
-	background-image: linear-gradient(rgba(255, 253, 253, 0.849),rgba(138, 135, 135, 0.164)),url(images/back.jpg);
+    height: 800px;
+	width: 1400px;
+	background-image: linear-gradient(rgba(69, 163, 167, 0.164),rgba(221, 220, 218, 0.74)),url(images/back.jpg);
 	background-position: center;
-	background-size: cover;
+	background-size: auto;
 	position: absolute;
 }
 .navbar
 {
     display: flex;
     align-items: center;
-    padding: 10px;
-    padding-left: 0px;
-    padding-right: 150px;
-    padding-top: 0px;
+    padding: 20px;
+    padding-left: 30px; 
+    padding-right: 80px;
+    padding-top: 50px;
 }
 nav
 {
@@ -40,13 +40,13 @@ nav ul li
 nav ul li a
 {
     text-decoration: none;
-    font-size: 20px;
+    font-size: 25px;
     color: white;
     font-family: sans-serif;
 }
 nav ul li button
 {
-    font-size: 20px;
+    font-size: 25px;
     color: white;
     outline: none;
     border: none;
@@ -62,12 +62,16 @@ nav ul li a:hover
 {
     color: aqua;
 }
-/* a
+a
 {
     text-decoration: none;
-    color: rgb(48, 153, 202);
+    color: rgb(246, 247, 248);
     font-size: 40px;
-} */
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    border-color: black;
+    border-width: medium;
+}
 #login-form
 {
     display: none;
@@ -106,7 +110,7 @@ nav ul li a:hover
 	position: absolute;
 	width: 110px;
 	height: 100%;
-	background: #0899b3;
+	background: #109dc0;
 	border-radius: 30px;
 	transition: .5s;
 }
@@ -132,7 +136,7 @@ nav ul li a:hover
 	border-left:0;
 	border-top:0;
 	border-right:0;
-	border-bottom: 1px solid rgb(245, 240, 240);
+	border-bottom: 1px solid rgb(255, 254, 254);
 	outline:none;
 	background: transparent;
 }
@@ -143,7 +147,7 @@ nav ul li a:hover
 	cursor: pointer;
 	display: block;
 	margin: auto;
-	background: #0996b9;
+	background: #109dc0;
 	border: 0;
 	outline: none;
 	border-radius: 30px;
@@ -154,7 +158,7 @@ nav ul li a:hover
 }
 span
 {
-	color:rgb(241, 234, 234);
+	color:rgb(250, 248, 248);
 	font-size:12px;
 	bottom:68px;
 	position:absolute;
