--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ nav ul li a:hover
 {
     color: aqua;
 }
-a
+#text
 {
     text-decoration: none;
     color: rgb(246, 247, 248);
@@ -209,7 +209,7 @@ left:10%
 #MenuItems2{
 flex-direction: column-reverse;
 position:absolute;
-top: 40%;
+top: 30%;
 left:10%;
 }
 .head{
@@ -217,3 +217,10 @@ left:10%;
     position:absolute;
 
 }
+#MenuItems3{
+	color: rgb(11, 214, 221);
+	font-size:larger;
+	left:15%;
+	position:absolute;
+	top:40%;
+	}
