--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ text-align: center;
 }
 .book{
 position:absolute;
-top: 10%;
+top: 4%;
 left:10%
 }
 #MenuItems2{
@@ -223,4 +223,30 @@ left:10%;
 	left:15%;
 	position:absolute;
 	top:40%;
+	font-size: 25px;
 	}
+	#MenuItems4{
+		color: rgb(11, 214, 221);
+		font-size:larger;
+		left:43%;
+		position:absolute;
+		top:40%;
+		font-size: 25px;
+		}
+
+	
+	  a:visited {
+		color: rgb(255, 255, 255);
+		background-color: transparent;
+		text-decoration: none;
+	  }
+	  a:hover {
+		color: rgb(146, 11, 74);
+		background-color: transparent;
+	
+	  }
+	  a:active {
+		color: rgb(199, 18, 87);
+		background-color: transparent;
+		
+	  }
