--- a/style.css
+++ b/style.css
@@ -183,8 +183,9 @@ span
 	font-size: 15;
 }
 h1 {
-color:aqua;
+color:rgb(213, 235, 235);
 text-align: center;
+font-size: 50px;
 
 
 
@@ -233,7 +234,14 @@ left:10%;
 		top:40%;
 		font-size: 25px;
 		}
-
+		#MenuItems5{
+			color: rgb(11, 214, 221);
+			font-size:larger;
+			left:63%;
+			position:absolute;
+			top:40%;
+			font-size: 25px;
+			}
 	
 	  a:visited {
 		color: rgb(255, 255, 255);
