--- a/style.css
+++ b/style.css
@@ -258,3 +258,38 @@ left:10%;
 		background-color: transparent;
 		
 	  }
+	  #button1 {
+		transition: all .5s ease;
+		color: #fff;
+		border: 3px solid white;
+		font-family:'Montserrat', sans-serif;
+		text-transform: uppercase;
+		text-align: center;
+		line-height: 1;
+		font-size: 17px;
+		background-color : transparent;
+		padding: 20px;
+		outline: none;
+		border-radius: 4px;
+	}
+	#button1:hover {
+		color: #001F3F;
+		background-color: #fff;
+	}
+	#back{
+		transition: all .5s ease;
+		color: #fff;
+		border: 3px solid white;
+		font-family:'Montserrat', sans-serif;
+		text-align: center;
+		line-height: 1;
+		font-size: 17px;
+		background-color : transparent;
+		padding: 10px;
+		outline: none;
+		border-radius: 4px;
+	}
+	#back:hover {
+		color: #001F3F;
+		background-color: #fff;
+	}
