--- a/style.css
+++ b/style.css
@@ -66,11 +66,11 @@ nav ul li a:hover
 #text
 {
     text-decoration: none;
-    color: rgb(246, 247, 248);
-    font-size: 40px;
+    color: rgb(229, 237, 245);
+    font-size: 50px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
-    border-color: black;
+    border-color: rgb(77, 73, 73);
     border-width: medium;
 }
 #login-form
